--- a/app/views/layouts/store.html.erb
+++ b/app/views/layouts/store.html.erb
@@ -20,7 +20,11 @@
 			</div>
 			 
 			<div id="main">
-			<%= yield :layout %>
+				<% if flash[:notice] -%>
+					<div id="notice"><%= flash[:notice] %></div>
+				<% end -%>
+				
+				<%= yield :layout %>
 			</div>
 		</div>
  	</body>
