--- a/app/views/layouts/store.html.erb
+++ b/app/views/layouts/store.html.erb
@@ -4,6 +4,7 @@
  	<head>
  		<title>Pragprog Books Online Store</title>
  		<%= stylesheet_link_tag 'depot' , :media => "all" %>
+		<%= javascript_include_tag :defaults %>
  	</head>
  	<body id="store">
  		<div id="banner">
@@ -13,10 +14,27 @@
  		
 		<div id="columns">
  			<div id="side">
-			<a href="http://www....">Home</a><br />
-			<a href="http://www..../faq">Questions</a><br />
-			<a href="http://www..../news">News</a><br />
-			<a href="http://www..../contact">Contact</a><br />  
+				
+				<%if @cart%>
+					<% hidden_div_if(@cart.items.empty?, :id => "cart" ) do %>
+						<%= render(:partial => "cart" , :object => @cart) %>
+					<% end %>
+				<% end %>
+				
+				<a href="http://www....">Home</a><br />
+				<a href="http://www..../faq">Questions</a><br />
+				<a href="http://www..../news">News</a><br />
+				<a href="http://www..../contact">Contact</a><br /> 
+				
+				<% if session[:user_id] %>
+					<br />
+					<%= link_to 'Orders', :controller => 'orders' %><br />
+					<%= link_to 'Products', :controller => 'products' %><br />
+					<%= link_to 'Users', :controller => 'users' %><br />
+					<br />
+					<%= link_to 'Logout', :controller => :admin, :action => 'logout' %>
+				<% end %>
+				 
 			</div>
 			 
 			<div id="main">
