--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -8,9 +8,9 @@
   </tr>
 <% for order in @orders %>
   <tr>
-  	 <td><%= order.name %></td><td></td>
-	 <td><%=h order.address %></td><td></td>
-	 <td><%=h order.email %></td><td></td>
+  	 <td><%= order.name %></td>
+	 <td><%=h order.address %></td>
+	 <td><%=h order.email %></td>
 	 <td><%= link_to 'Show', order %></td>
 	 <td><%= link_to 'Destroy', order, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
