--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -19,20 +19,20 @@
   <%=h @order.pay_type %>
 </p>
 <p>
-  <table>
+  <table id="t_orders">
   <b>Ordered items:</b>
      <tr>
-      <th>Title</th><th></th>
-	  <th>Quantity</th><th></th>
-	  <th>Price</th><th></th>
+      <th>Title</th>
+	  <th>Quantity</th>
+	  <th>Price</th>
      </tr>
 	 <%
 		@items.each do |item|
 		@product=  Product.find(item.product_id) %>
      <tr>
-		<td><%=h @product.title %></td><td></td>
-		<td><%=h item.quantity %></td><td></td>
-		<td><%=h item.total_price %></td><td></td>
+		<td><%=h @product.title %></td>
+		<td><%=h item.quantity %></td>
+		<td><%=h item.total_price %></td>
 	 </tr>
 		<br />
    	<% end %>
