--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
-<div id="product-list">
+<div>
 	<h1>Listing products</h1>
 	
-	<table cellpadding="5" cellspacing="0">
+	<table id="product-list" cellpadding="5" cellspacing="0">
 	<% for product in @products %>
 		<tr valign="top" class="<%= cycle('list-line-odd', 'list-line-even') %>">
 		
@@ -22,6 +22,17 @@
 		</tr>
 		<% end %>
 	</table>
+
 </div>
 <br />
 <%= link_to 'New product', new_product_path %>
+
+	
+	<p id="search">
+	<% form_tag products_path, :method => 'get' do%>
+	<p>
+	<%= text_field_tag :search, params[:search] %>
+	<%= submit_tag "Search", :name => nil %>
+	</p> 
+	<%end%>
+	</p>
