--- a/public/stylesheets/mydepot.css
+++ b/public/stylesheets/mydepot.css
@@ -67,11 +67,12 @@ font: bold smaller sans-serif;
 
 
 #menu1 {
-	margin: 1em 1em 15em 1em;
+	margin: 0em 1em 15em 1em;
 	padding: 1em 1em 1em 1em;
 	list-style:none;
 	float: left;
 	width: 10em; /* anchura del menu */
+	color: #E60066 ;
 }
 
 #menu1 a {
@@ -79,15 +80,6 @@ font: bold smaller sans-serif;
 	padding-top: 0em;
 }
 
-#menu1 p {
-	font: georgia bold;
-	margin: 1em auto 0.5em auto;
-	color: #442222
-	padding: 0em;
-	font-size: 125%;
-	color: #700033 ;
-	border: 1px dotted #442222 ;
-}
 
 #menu2 a {
 	display: block;
@@ -116,21 +108,9 @@ font: bold smaller sans-serif;
 #menu3 {
 	list-style:none;
 	float: left;
-	width: 7em; /* anchura del menu */
-	margin: 1em 2em 1em 1em;
-	padding: 1em 1em 1em 1em;
-	font: georgia bold;
-
 }
 
-a {
-	color: #442222 !important;
-}
 
-active a, a:hover { 
-	color: #cc5533 !important;
-	font-size: 105% !important;
-}
 
 #main {
 	margin: 0em 1em auto 14em;
@@ -178,10 +158,6 @@ color: #442222 ;
 
 	border:1px dotted #442222;
 
-}
-
-#search {
-	margin: 1em 1em auto 30em;
 }
 
 /* Styles for products/index */
@@ -264,7 +240,7 @@ font-family: sans-serif;
 	width: 75px;
 	float: left;
 	padding: 1em 1em 1em 1em;
-	margin-bottom: 0em;
+	margin-bottom: 1em;
 }
 #store .entry h3 {
 margin-bottom: 2px;
@@ -290,9 +266,6 @@ margin-right: 2em;
 #store .entry form, #store .entry form div {
 display: inline;
 }
-
-
-
 
 /* Styles for the cart in the main page and the sidebar */
 .cart-title {
