also titles and description fixed

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,9 +2,9 @@
 
 <table id="list_orders">
   <tr>
-    <th>Name</th><th></th>
-	<th>Address</th><th></th>
-	<th>Email</th><th></th>
+    <th>Name</th>
+	<th>Address</th>
+	<th>Email</th>
   </tr>
 <% for order in @orders %>
   <tr>
