--- a/public/stylesheets/depot.css
+++ b/public/stylesheets/depot.css
@@ -143,7 +143,7 @@ h1 {
 	font: 150% georgia;
 	color: #700033 ;
 	border-bottom: 1px dotted #442222 ;
-	margin: 1em 1em 1em 0em;
+	margin: 0.5em 1em 1em 0em;
 }
 
 #main a{
@@ -181,7 +181,7 @@ color: #442222 ;
 }
 
 #search {
-	margin: 1em 1em auto 30em;
+	margin: 1em auto auto 30em;
 }
 
 /* Styles for products/index */
