--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,8 @@
+	<div class="search"><% form_tag :method => 'get' do%>
+	<div class="search"><%= text_field_tag :search, params[:search] %>
+	<%= submit_tag "Search", :name => nil %>
+	<%end%>
+	</div></div>
 <div>
 	<h1>Listing products</h1>
 	
@@ -26,13 +31,3 @@
 </div>
 <br />
 <%= link_to 'New product', new_product_path %>
-
-	
-	<p id="search">
-	<% form_tag products_path, :method => 'get' do%>
-	<p>
-	<%= text_field_tag :search, params[:search] %>
-	<%= submit_tag "Search", :name => nil %>
-	</p> 
-	<%end%>
-	</p>
