--- a/app/views/store/_cart.html.erb
+++ b/app/views/store/_cart.html.erb
@@ -3,7 +3,7 @@
 	<%= render(:partial => "cart_item" , :collection => cart.items) %>
 	<tr class="total-line">
 	<td colspan="2">Total</td>
-	<td class="total-cell"><%= number_to_currency(cart.total_price) %></td>
+	<td class="total-cell"><%= number_to_currency(cart.total_price, :unit => "&#8364;") %></td>
 	</tr>
 </table>
 <%= button_to "Checkout" , :action => :checkout %>
