--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Contact</h1>
-
+<div id="form_contact">
 <% form_tag :action => "send_mail" do %>
   <p>
     <%= label :email, :name, "Name" %><br />
@@ -25,3 +25,4 @@
     <%= submit_tag "Submit" %>
   </p>
 <% end %>
+</div>
