--- a/app/views/layouts/store.html.erb
+++ b/app/views/layouts/store.html.erb
@@ -8,7 +8,7 @@
  	</head>
  	<body id="store">
  		<div id="header">
- 		<%= @page_title || "The HandBag eShop" %>
+ 		<%= @page_title || "Mam na oku" %>
  		</div>
  		
 		<div id="content">
@@ -47,9 +47,7 @@
 				<%= yield :layout %>
 			</div>
 				<div id="footer">
-					<p> Web Page Created by Kamila & Helena </p>
-					<p> Developed with </p> 
-					<p id="rails"> Rails <a href="http://rubyonrails.org/"></p>
+					<p> Created by kamelury </p>
 				</div>
 		</div>
 		
