--- a/app/views/layouts/store.html.erb
+++ b/app/views/layouts/store.html.erb
@@ -2,13 +2,13 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd" >
  <html>
  	<head>
- 		<title>The HandBag eShop</title>
+ 		<title>Na oku</title>
  		<%= stylesheet_link_tag 'depot' , :media => "all" %>
 		<%= javascript_include_tag :defaults %>
  	</head>
  	<body id="store">
  		<div id="header">
- 		<%= @page_title || "Mam na oku" %>
+ 		<%= @page_title || "Na oku" %>
  		</div>
  		
 		<div id="content">
@@ -16,7 +16,7 @@
 				
 				<ul id="menu2">				
 				<li id="m-home"><%= link_to 'Store', :controller => 'store' %><br />
-				<li id="m-contact"><%= link_to 'Contact', :controller => 'contact' %><br /> 
+				<li id="m-contact"><%= link_to 'Contact', :controller => 'contact' %><br />  
 				</ul>				
 			
 				<%if @cart%>
