--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,7 +15,7 @@
 
 <p>
 	<b>Price:</b>
-	<%=number_to_currency(@product.price, :unit => "&#8364;") %>
+	<%=number_to_currency(@product.price, :unit => "$") %>
 </p>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
