--- a/app/views/store/_cart_item.html.erb
+++ b/app/views/store/_cart_item.html.erb
@@ -5,5 +5,5 @@
 <% end %>
 	<td><%= cart_item.quantity %>&times;</td>
 	<td><%=h cart_item.title %></td>
-	<td class="item-price"><%= number_to_currency(cart_item.price, :unit => "&#8364;") %></td>
+	<td class="item-price"><%= number_to_currency(cart_item.price, :unit => "$") %></td>
 </tr>
