--- a/app/views/store/checkout.html.erb
+++ b/app/views/store/checkout.html.erb
@@ -12,23 +12,17 @@
    </p>
    
    <p>
-    <%= label :order, :address, "Address:" %>
-    <%= form.text_area :address, :rows => 3, :cols => 32 %>
-   </p>
-   
-   <p>
     <%= label :order, :email, "E-Mail:" %>
     <%= form.text_field :email, :size => 40 %>
    </p>
-   
+
    <p>
-    <%= label :order, :pay_type, "Pay with:" %>
-    <%=
-    form.select :pay_type,
-    			 Order::PAYMENT_TYPES,
-    			 :prompt => "Select a payment method"
-   %>
+    <%= label :order, :note, "Note:" %>
+    <%= form.text_area :note, :rows => 3, :cols => 32 %>
    </p>
+   
+
+
    <%= submit_tag "Place Order" , :class => "submit" %>
   <% end %>
  </fieldset>
