--- a/public/stylesheets/depot.css
+++ b/public/stylesheets/depot.css
@@ -1,17 +1,17 @@
 /* Global styles */
 
 #store {
-	padding-top: 5em;
+	/*padding-top: 5em;*/
 	margin: 0 auto 0 auto;
 }
 #header {
 	width: 505px;
-	height: 160px; 
+	/*height: 160px;*/ 
 	padding: 1em 1em 0em 1em;
 	margin: 0 auto 0 auto;
 	z-index:1;
 	text-indent: -9999px; /* para que el texto no se vea */
-	background:url(../images/images_style/header.png)no-repeat;
+	/*background:url(../images/images_style/header.png)no-repeat;*/
 }
 
 body {
@@ -23,7 +23,9 @@ body {
 	margin: 0 auto 0 auto;
 	width: 825px;
 	height: 816px; 
-	padding: 1em 1em auto 1em;
+	padding-top: 1em;
+	padding-left: 1em;
+	padding-right: 1em;
 	background:url(../images/images_style/bg_body_b.png)no-repeat;
 	z-index:-1;
 }
@@ -38,7 +40,7 @@ font: bold smaller sans-serif;
 
 
 #footer {
-	float: bottom;
+	/*float: bottom;*/
 	width:60em;
 	height:10em;
 	padding: 1em 1em 1em 1em;
@@ -58,7 +60,6 @@ font: bold smaller sans-serif;
 	display: block;
 	width: 50px;
 	height: 64px;
-	float:center;
 	margin: 1em 28em 1em 28em;
 	text-indent: -9999px;
 
@@ -73,6 +74,11 @@ a {
 	color: #442222 !important;
 }
 
+p {
+	padding-right: 1em;
+}
+
+
 #menu1 {
 	margin: 1em 1em 15em 1em;
 	padding: 1em 1em 1em 1em;
@@ -86,7 +92,7 @@ a {
 }
 
 #menu1 p {
-	font: georgia bold;
+	font-family: Georgia bold;
 	margin: 1em auto 0.5em auto;
 	padding: 0em;
 	font-size: 125%;
@@ -123,7 +129,7 @@ a {
 	width: 7em; /* anchura del menu */
 	margin: 1em 2em 1em 1em;
 	padding: 1em 1em 1em 1em;
-	font: georgia bold;
+	font-family: Georgia bold;
 }
 
 #menu3 li {
@@ -255,29 +261,32 @@ padding-right: 1em;
 
 
 #store .entry {
+	display: table;
 	border-bottom: 1px dotted #773311 ;
-	margin: 1em 2em 2em 2em;
+	margin: 1em 1em 0em 1em;
 }
 #store .title {
 font-size: 120%;
 font-family: sans-serif;
 }
+
 #store .entry img {
 	width: 75px;
-	float: left;
-	padding: 0.5em 1em 0.4em 0em;
+	display: inline-block;
+	vertical-align: middle;
 }
 #store .entry h3 {
 margin-bottom: 2px;
 color: #227 ;
 }
+
 #store .entry p {
 margin-top: 0px;
 margin-bottom: 0.8em;
 padding: 0.5em 0.5em 0.5em 6.5em;
 position: relative;
-
 }
+
 #store .entry .price-line {
 }
 #store .entry .add-to-cart {
@@ -289,8 +298,23 @@ font-weight: bold;
 margin: auto 1em auto auto;
 }
 
-#store .entry form, #store .entry form div {
-display: inline;
+
+#store .entry .entry_left {
+float: left;
+display:inline;
+width: 75px;
+height: 145px; /*TODO make it relative*/
+line-height: 145px; /*has to be the same as height for the vertical alignment to work*/
+padding-right: 1em;
+border-right: 1px dotted #773311 ;
+margin: 1em;
+}
+
+#store .entry .entry_right {
+float: left;
+display:inline;
+width: 300px;
+margin: 1em;
 }
 
 #form_contact{
