--- a/app/views/layouts/store.html.erb
+++ b/app/views/layouts/store.html.erb
@@ -12,9 +12,12 @@
  		</div>
  		
 		<div id="content">
+			
  			<div id="menu1">
+ 				<%= link_to image_tag("/images/images_style/sale.png"), {:controller => 'store', :action => "index" } %>
+	
+				<ul id="menu2">	
 				
-				<ul id="menu2">				
 				<li id="m-home"><%= link_to 'Store', :controller => 'store' %><br />
 				<li id="m-contact"><%= link_to 'Contact', :controller => 'contact' %><br />  
 				</ul>				
