--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -12,6 +12,10 @@
     <%= f.text_area :description %>
   </p>
   <p>
+   <%= f.label :status, "Status:" %>
+   <%= f.select :status, Product::STATUSES %>
+  </p>
+  <p>
     <%= f.label :image_url %><br />
     <%= f.text_field :image_url %>
   </p>
