--- a/app/views/store/checkout.html.erb
+++ b/app/views/store/checkout.html.erb
@@ -23,7 +23,7 @@
    
 
 
-   <%= submit_tag "Place Order" , :class => "submit" %>
+   <%= submit_tag "send" , :class => "submit" %>
   <% end %>
  </fieldset>
 </div>
