modify email template

--- a/app/views/notifications/question.erb
+++ b/app/views/notifications/question.erb
@@ -1,4 +1,7 @@
-<%= @sender_name %> wrote you an email:
+Name: <%= @sender_name %> 
+Email: <%= @sender_email %>
+Subjest: <%= @subject %>
+
 
 ---
 <%= @message %>
