--- a/app/views/lead/notice.erb
+++ b/app/views/lead/notice.erb
@@ -1,17 +1,17 @@
 Name: <%= @sender_name %> 
 Email: <%= @sender_email %>
-Subject: <%= @message_subject %>
-
 
 Items:
----
+------------------------------------
+<% @items.each do |item|
+   @product=  Product.find(item.product_id) %>
+   		> <%=h @product.title %>
+   	<% end %>
 
-<%= @items %>
----
 
 
 Message:
----
+------------------------------------
+
 
 <%= @note %>
----
