--- a/app/views/layouts/store.html.erb
+++ b/app/views/layouts/store.html.erb
@@ -4,8 +4,12 @@
  	<head>
  		<title>Na oku</title>
  		<%= stylesheet_link_tag 'depot' , :media => "all" %>
+		<%= javascript_include_tag 'jquery' %>
+		<%= stylesheet_link_tag 'facebox' %>
+		<%= javascript_include_tag 'facebox' %>
+		<script>var $j = jQuery.noConflict();</script>
 		<%= javascript_include_tag :defaults %>
- 	</head>
+		
  	<body id="store">
  		<div id="header">
  		<%= @page_title || "Na oku" %>
